Centered the game

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="buttons">
     <button id="btn1">Rock</button>
     <button id="btn2">Paper</button>
     <button id="btn3">Scissors</button>
+    </div>
 </body>
 </html>
